<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="20dp"
       android:background="@color/purple">

       <ImageView
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src="@drawable/menu_icon"
           android:layout_centerVertical="true"/>

       <ImageView
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src="@drawable/add_icon"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"/>

   </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo"
                    android:textSize="34sp"
                    android:layout_centerHorizontal="true"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/app_name"
                    android:background="@color/white"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:elevation="8dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/search_icon"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"/>


                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/house_icon" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Apartment"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/local_movers" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Movers"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/campmarket_icon" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/camp_Market"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_margin="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/hospital_icon" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Chemist"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"/>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:background="@color/sandy_brown"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/service_id"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/Peru_background"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50dp"
                        android:text="@string/services"
                        android:textAllCaps="true"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="50sp"
                        android:layout_marginRight="10dp"
                        android:text="@string/Service_Description"
                        android:textSize="20sp" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_toRightOf="@id/service_id"
                    android:background="@color/sandy_brown" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:background="@color/card_5"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Availability"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textAllCaps="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_av"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:padding="20dp"
                android:background="@color/card_5"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_av"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>